<resources>
    <string name="app_name">DimigoIN</string>

    <!-- Strings related to login -->
    <string name="prompt_email">디미고인 계정</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_content">ContentActivity</string>

    <string name="timestamp_now">방금 전</string>
    <string name="timestamp_minute">분 전</string>
    <string name="timestamp_hour">시간 전</string>
    <string name="timestamp_day">일 전</string>
    <string name="timestamp_month">달 전</string>
    <string name="timestamp_year">년 전</string>
    <string name="title_activity_comment">CommentActivity</string>

    <string name="tab_name_info_notice">공지사항</string>
    <string name="tab_name_info_calendar">학사일정</string>
    <string name="tab_name_info_meal">디미밥</string>
    <string name="tab_name_info_contest">대회정보</string>
    <string name="tab_name_info_kin">지식IN</string>
    <string name="tab_name_info_enjoy">맛집 및 놀거리</string>
    <string name="tab_name_info_playground">디미운동장</string>
    <string name="tab_name_info_market">디미마켓</string>
    <string name="tab_name_info_notice_moblie">모바일 공지</string>

    <string name="tab_name_community_file">자료게시판</string>
    <string name="tab_name_community_freeboard">자유게시판</string>
    <string name="tab_name_community_knowledge">지식나눔대회 후기</string>
    <string name="tab_name_community_laf">분실물 &amp; 습득물</string>
    <string name="tab_name_community_suggest">건의사항</string>

    <string name="comment_edittext_hint">댓글을 입력해보세요.</string>
    <string name="comment_botton_text">입력</string>

    <string name="hello_world">Hello world!</string>

    <string name="bbs_like">좋아요 </string>
    <string name="bbs_comment">댓글 </string>
    <string name="bbs_view">조회수 </string>

    <string name="bbs_unit">건</string>
    <string name="login_failed_msg">로그인에 실패했습니다.</string>
    <string name="login_failed_network_msg">네트워크를 확인해주세요.</string>
    <string name="login_succeed_msg">로그인 성공</string>
    <string name="login_processing_msg">로그인 중입니다.</string>
    <string name="home_title_today_meal">오늘의 급식</string>
    <string name="home_title_today_meal_breakfast">아침</string>
    <string name="home_title_today_meal_lunch">점심</string>
    <string name="home_title_today_meal_dinner">저녁</string>
    <string name="row_bbs_content_write_comment">댓글 작성</string>
    <string name="row_bbs_content_post_hit">좋아요</string>
    <string name="row_bbs_content_more_info">더 보기</string>
    <string name="title_activity_editor">EditorActivity</string>

    <string name="error_meal_get">급식을 불러오는중 문제가 발생했습니다</string>

</resources>
